GP-2558 PropertyMap templatize and cleanup.  ProgramMerge bug/cleanup related to User Properties.  Program Diff bug fix for multiple labels at same address.